--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from 'astro-icon/components';
 import logo from '~/images/devghuraba-hor.webp';
+import logo2 from '~/images/devghuraba-hor-2.webp';
 
 const navigationItems = [
   { id: 'tentang', label: 'Tentang' },
@@ -16,7 +17,8 @@ const navigationItems = [
 >
   <div class="container mx-auto px-4 py-4">
     <div class="flex items-center justify-between">
-      <img src={logo.src} alt="Logo Devghuraba Teknologi" height="36" width="288" />
+      <img src={logo2.src} alt="Logo Devghuraba Teknologi" height="36" width="187" class="xs:hidden" />
+      <img src={logo.src} alt="Logo Devghuraba Teknologi" height="36" width="288" class="hidden xs:block" />
 
       <nav class="hidden lg:flex items-center space-x-8">
         {navigationItems.map(item => (
@@ -44,8 +46,8 @@ const navigationItems = [
           class="bg-primary text-white rounded text-sm font-medium px-4 py-2 hover:bg-primary-700 flex items-center gap-2"
           aria-label="Hubungi Kami"
         >
-          <Icon name="tabler:message" class="w-4 h-4" />
-          <span class="hidden sm:inline">Hubungi Kami</span>
+          <Icon name="tabler:message" class="sm:hidden w-4 h-4" />
+          <span class="hidden sm:block">Hubungi Kami</span>
         </a>
         <button
           id="mobile-menu-button"
@@ -73,6 +75,20 @@ const navigationItems = [
     </div>
   </div>
 </header>
+
+<style>
+  .xs\:hidden {
+    @media (width >= 30rem /* 480px */) {
+      display: none;
+    }
+  }
+
+  .xs\:block {
+    @media (width >= 30rem /* 480px */) {
+      display: block;
+    }
+  }
+</style>
 
 <script>
   function mobileNavAction() {
