--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -29,7 +29,7 @@ import heroImage from '~/images/hero-bg.webp';
 
       <div class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-12">
         <a
-          href="https://play.google.com/store/apps/developer?id=Ghuraba+Developer"
+          href="https://play.google.com/store/apps/dev?id=7736793567740096342"
           target="_blank"
           class="bg-primary text-white text-sm font-medium rounded px-8 h-10.5 flex items-center justify-center gap-2 hover:shadow-lg hover:shadow-primary/25 transition-all duration-300 group"
         >
@@ -37,12 +37,12 @@ import heroImage from '~/images/hero-bg.webp';
           <Icon name="tabler:arrow-right" class="ml-2 h-5 w-5 group-hover:translate-x-1 transition-transform" />
         </a>
 
-        <button
+        <!-- <button
           class="bg-white border border-primary text-primary text-sm font-medium rounded px-8 h-10.5 flex items-center justify-center gap-2 hover:bg-primary hover:text-white transition-colors"
         >
           <Icon name="tabler:player-play" class="mr-2 h-5 w-5" />
           Demo Produk
-        </button>
+        </button> -->
       </div>
 
       <div class="grid grid-cols-3 gap-6 max-w-2xl mx-auto">
